--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,4 @@
-/** biome-ignore-all lint/suspicious/noUnknownAtRules: <explanation> */
+/** biome-ignore-all lint/suspicious/noUnknownAtRules: tailwindcss */
 @import "tailwindcss";
 
 @import "tw-animate-css";
